--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "dojo-base",
   "version": "1.0.0",
   "license": "MIT",
-  "devDependencies": {
-    "jest": "^29.7.0"
-  },
   "scripts": {
     "test": "jest"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "jest": "^29.7.0"
   }
 }
